# bookstore

./: pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
bookstore/bookstore/: settings.py  urls.py
bookstore/order/: factories.py  urls.py
bookstore/order/migrations/: 0001_initial.py
bookstore/order/models/: order.py
bookstore/order/serializers/: order_serializer.py
bookstore/order/tests/: test_order_viewset.py
bookstore/order/viewsets/: __init__.py  order_viewset.py
bookstore/product/: factories.py  urls.py
bookstore/product/migrations/: 0001_initial.py
bookstore/product/models/: product.py
bookstore/product/serializers/: product_serializer.py
bookstore/product/tests/test_viewsets/: test_product_viewset.py
bookstore/product/viewsets/: product_viewset.py
