[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Ketilen <ketilensagas@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
django-rest-framework = "^0.1.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

